source/libopensc/pkcs15.d

module libopensc.pkcs15;

import core.stdc.config : c_ulong;
import libopensc.opensc;
import libopensc.types;
import scconf.scconf;
import libopensc.auxdata;

version(FAKE_OPENSC_VERSION)
{
	version = UPTO_15_OPENSC_VERSION;
}

extern (C) 
{
	enum SC_PKCS15_CACHE_DIR = ".eid";
	enum SC_PKCS15_PIN_MAGIC = 826366246;
	enum SC_PKCS15_MAX_PINS = 8;
	enum SC_PKCS15_MAX_LABEL_SIZE = 255;
	enum SC_PKCS15_MAX_ID_SIZE = 255;
	enum SC_PKCS15_MAX_ACCESS_RULES = 8;
	struct sc_pkcs15_id
	{
		ubyte[SC_PKCS15_MAX_ID_SIZE] value;
		size_t len;
	}
	enum 
	{
		SC_PKCS15_CO_FLAG_PRIVATE = 1,
		SC_PKCS15_CO_FLAG_MODIFIABLE = 2,
		SC_PKCS15_CO_FLAG_OBJECT_SEEN = 2147483648u,
	}
	enum 
	{
		SC_PKCS15_PIN_FLAG_CASE_SENSITIVE = 1,
		SC_PKCS15_PIN_FLAG_LOCAL = 2,
		SC_PKCS15_PIN_FLAG_CHANGE_DISABLED = 4,
		SC_PKCS15_PIN_FLAG_UNBLOCK_DISABLED = 8,
		SC_PKCS15_PIN_FLAG_INITIALIZED = 16,
		SC_PKCS15_PIN_FLAG_NEEDS_PADDING = 32,
		SC_PKCS15_PIN_FLAG_UNBLOCKING_PIN = 64,
		SC_PKCS15_PIN_FLAG_SO_PIN = 128,
		SC_PKCS15_PIN_FLAG_DISABLE_ALLOW = 256,
		SC_PKCS15_PIN_FLAG_INTEGRITY_PROTECTED = 512,
		SC_PKCS15_PIN_FLAG_CONFIDENTIALITY_PROTECTED = 1024,
		SC_PKCS15_PIN_FLAG_EXCHANGE_REF_DATA = 2048,
	}
	enum 
	{
		SC_PKCS15_PIN_TYPE_FLAGS_MASK = SC_PKCS15_PIN_FLAG_LOCAL | SC_PKCS15_PIN_FLAG_INITIALIZED | SC_PKCS15_PIN_FLAG_UNBLOCKING_PIN | SC_PKCS15_PIN_FLAG_SO_PIN,
		SC_PKCS15_PIN_TYPE_FLAGS_SOPIN = SC_PKCS15_PIN_FLAG_SO_PIN | SC_PKCS15_PIN_FLAG_INITIALIZED,
		SC_PKCS15_PIN_TYPE_FLAGS_PIN_GLOBAL = SC_PKCS15_PIN_FLAG_INITIALIZED,
		SC_PKCS15_PIN_TYPE_FLAGS_PIN_LOCAL = SC_PKCS15_PIN_FLAG_INITIALIZED | SC_PKCS15_PIN_FLAG_LOCAL,
		SC_PKCS15_PIN_TYPE_FLAGS_PUK_GLOBAL = SC_PKCS15_PIN_FLAG_UNBLOCKING_PIN | SC_PKCS15_PIN_FLAG_INITIALIZED,
		SC_PKCS15_PIN_TYPE_FLAGS_PUK_LOCAL = SC_PKCS15_PIN_FLAG_UNBLOCKING_PIN | SC_PKCS15_PIN_FLAG_INITIALIZED | SC_PKCS15_PIN_FLAG_LOCAL,
	}
	enum 
	{
		SC_PKCS15_PIN_TYPE_BCD = 0,
		SC_PKCS15_PIN_TYPE_ASCII_NUMERIC = 1,
		SC_PKCS15_PIN_TYPE_UTF8 = 2,
		SC_PKCS15_PIN_TYPE_HALFNIBBLE_BCD = 3,
		SC_PKCS15_PIN_TYPE_ISO9564_1 = 4,
	}
	enum 
	{
		SC_PKCS15_PIN_AUTH_TYPE_PIN = 0,
		SC_PKCS15_PIN_AUTH_TYPE_BIOMETRIC = 1,
		SC_PKCS15_PIN_AUTH_TYPE_AUTH_KEY = 2,
		SC_PKCS15_PIN_AUTH_TYPE_SM_KEY = 3,
	}
	struct sc_pkcs15_pin_attributes
	{
		uint flags;
		uint type;
		size_t min_length;
		size_t stored_length;
		size_t max_length;
		int reference;
		ubyte pad_char;
	}
	struct sc_pkcs15_authkey_attributes
	{
		int derived;
		sc_pkcs15_id skey_id;
	}
	struct sc_pkcs15_biometric_attributes
	{
		uint flags;
		sc_object_id template_id;
	}
	struct sc_pkcs15_auth_info
	{
		sc_pkcs15_id auth_id;
		sc_path path;
		uint auth_type;
		union anonymous
		{
			sc_pkcs15_pin_attributes pin;
			sc_pkcs15_biometric_attributes bio;
			sc_pkcs15_authkey_attributes authkey;
		}
		anonymous attrs;
		uint auth_method;
		int tries_left;
		int max_tries;
		int max_unlocks;
	}
	enum 
	{
		SC_PKCS15_ALGO_OP_COMPUTE_CHECKSUM = 1,
		SC_PKCS15_ALGO_OP_COMPUTE_SIGNATURE = 2,
		SC_PKCS15_ALGO_OP_VERIFY_CHECKSUM = 4,
		SC_PKCS15_ALGO_OP_VERIFY_SIGNATURE = 8,
		SC_PKCS15_ALGO_OP_ENCIPHER = 16,
		SC_PKCS15_ALGO_OP_DECIPHER = 32,
		SC_PKCS15_ALGO_OP_HASH = 64,
		SC_PKCS15_ALGO_OP_GENERATE_KEY = 128,
	}
	struct sc_pkcs15_bignum
	{
		ubyte* data;
		size_t len;
	}
	struct sc_pkcs15_der
	{
		ubyte* value;
		size_t len;
	}
	struct sc_pkcs15_u8
	{
		ubyte* value;
		size_t len;
	}
	struct sc_pkcs15_pubkey_rsa
	{
		sc_pkcs15_bignum modulus;
		sc_pkcs15_bignum exponent;
	}
	struct sc_pkcs15_prkey_rsa
	{
		sc_pkcs15_bignum modulus;
		sc_pkcs15_bignum exponent;
		sc_pkcs15_bignum d;
		sc_pkcs15_bignum p;
		sc_pkcs15_bignum q;
		sc_pkcs15_bignum iqmp;
		sc_pkcs15_bignum dmp1;
		sc_pkcs15_bignum dmq1;
	}
	struct sc_pkcs15_pubkey_dsa
	{
		sc_pkcs15_bignum pub;
		sc_pkcs15_bignum p;
		sc_pkcs15_bignum q;
		sc_pkcs15_bignum g;
	}
	struct sc_pkcs15_prkey_dsa
	{
		sc_pkcs15_bignum pub;
		sc_pkcs15_bignum p;
		sc_pkcs15_bignum q;
		sc_pkcs15_bignum g;
		sc_pkcs15_bignum priv;
	}
	struct sc_pkcs15_gost_parameters
	{
		sc_object_id key;
		sc_object_id hash;
		sc_object_id cipher;
	}
	struct sc_pkcs15_pubkey_ec
	{
		sc_ec_parameters params;
		sc_pkcs15_u8 ecpointQ;
	}
	struct sc_pkcs15_prkey_ec
	{
		sc_ec_parameters params;
		sc_pkcs15_bignum privateD;
		sc_pkcs15_u8 ecpointQ;
	}
	struct sc_pkcs15_pubkey_gostr3410
	{
		sc_pkcs15_gost_parameters params;
		sc_pkcs15_bignum xy;
	}
	struct sc_pkcs15_prkey_gostr3410
	{
		sc_pkcs15_gost_parameters params;
		sc_pkcs15_bignum d;
	}
	struct sc_pkcs15_pubkey
	{
		int algorithm;
		sc_algorithm_id* alg_id;
		union anonymous
		{
			sc_pkcs15_pubkey_rsa rsa;
			sc_pkcs15_pubkey_dsa dsa;
			sc_pkcs15_pubkey_ec ec;
			sc_pkcs15_pubkey_gostr3410 gostr3410;
		}
		anonymous u;
	}
	struct sc_pkcs15_prkey
	{
		uint algorithm;
		union anonymous
		{
			sc_pkcs15_prkey_rsa rsa;
			sc_pkcs15_prkey_dsa dsa;
			sc_pkcs15_prkey_ec ec;
			sc_pkcs15_prkey_gostr3410 gostr3410;
		}
		anonymous u;
	}
	struct sc_pkcs15_enveloped_data
	{
		sc_pkcs15_id id;
		sc_algorithm_id ke_alg;
		ubyte* key;
		size_t key_len;
		sc_algorithm_id ce_alg;
		ubyte* content;
		size_t content_len;
	}
	struct sc_pkcs15_cert
	{
		int version_;
		ubyte* serial;
		size_t serial_len;
		ubyte* issuer;
		size_t issuer_len;
		ubyte* subject;
		size_t subject_len;
		ubyte* crl;
		size_t crl_len;
		sc_pkcs15_pubkey* key;
		sc_pkcs15_der data;
	}
	struct sc_pkcs15_cert_info
	{
		sc_pkcs15_id id;
		int authority;
		sc_path path;
		sc_pkcs15_der value;
	}
	struct sc_pkcs15_data
	{
		ubyte* data;
		size_t data_len;
	}
	struct sc_pkcs15_data_info
	{
		sc_pkcs15_id id;
		char[SC_PKCS15_MAX_LABEL_SIZE] app_label;
		sc_object_id app_oid;
		sc_path path;
		sc_pkcs15_der data;
	}
	enum 
	{
		SC_PKCS15_PRKEY_USAGE_ENCRYPT = 1,
		SC_PKCS15_PRKEY_USAGE_DECRYPT = 2,
		SC_PKCS15_PRKEY_USAGE_SIGN = 4,
		SC_PKCS15_PRKEY_USAGE_SIGNRECOVER = 8,
		SC_PKCS15_PRKEY_USAGE_WRAP = 16,
		SC_PKCS15_PRKEY_USAGE_UNWRAP = 32,
		SC_PKCS15_PRKEY_USAGE_VERIFY = 64,
		SC_PKCS15_PRKEY_USAGE_VERIFYRECOVER = 128,
		SC_PKCS15_PRKEY_USAGE_DERIVE = 256,
		SC_PKCS15_PRKEY_USAGE_NONREPUDIATION = 512,
	}
	enum 
	{
		SC_PKCS15_PRKEY_ACCESS_SENSITIVE = 1,
		SC_PKCS15_PRKEY_ACCESS_EXTRACTABLE = 2,
		SC_PKCS15_PRKEY_ACCESS_ALWAYSSENSITIVE = 4,
		SC_PKCS15_PRKEY_ACCESS_NEVEREXTRACTABLE = 8,
		SC_PKCS15_PRKEY_ACCESS_LOCAL = 16,
	}
	enum 
	{
		SC_PKCS15_PARAMSET_GOSTR3410_A = 1,
		SC_PKCS15_PARAMSET_GOSTR3410_B = 2,
		SC_PKCS15_PARAMSET_GOSTR3410_C = 3,
	}
	enum SC_PKCS15_GOSTR3410_KEYSIZE = 256;
	struct sc_pkcs15_keyinfo_gostparams
	{
		uint gostr3410;
		uint gostr3411;
		uint gost28147;
	}
	enum 
	{
		SC_PKCS15_ACCESS_RULE_MODE_READ = 1,
		SC_PKCS15_ACCESS_RULE_MODE_UPDATE = 2,
		SC_PKCS15_ACCESS_RULE_MODE_EXECUTE = 4,
		SC_PKCS15_ACCESS_RULE_MODE_DELETE = 8,
		SC_PKCS15_ACCESS_RULE_MODE_ATTRIBUTE = 16,
		SC_PKCS15_ACCESS_RULE_MODE_PSO_CDS = 32,
		SC_PKCS15_ACCESS_RULE_MODE_PSO_VERIFY = 64,
		SC_PKCS15_ACCESS_RULE_MODE_PSO_DECRYPT = 128,
		SC_PKCS15_ACCESS_RULE_MODE_PSO_ENCRYPT = 256,
		SC_PKCS15_ACCESS_RULE_MODE_INT_AUTH = 512,
		SC_PKCS15_ACCESS_RULE_MODE_EXT_AUTH = 1024,
	}
	struct sc_pkcs15_accessrule
	{
		uint access_mode;
		sc_pkcs15_id auth_id;
	}
	struct sc_pkcs15_key_params
	{
		void* data;
		size_t len;
		void function(void*) free_params;
	}
	
version(UPTO_15_OPENSC_VERSION)
{
	enum SC_MD_MAX_CONTAINER_NAME_LEN = 39;
	enum SC_MD_CONTAINER_MAP_VALID_CONTAINER = 1;
	enum SC_MD_CONTAINER_MAP_DEFAULT_CONTAINER = 2;
	struct sc_md_cmap_record
	{
		ubyte* guid;
		size_t guid_len;
		uint flags;
		uint keysize_sign;
		uint keysize_keyexchange;
	}
	struct sc_md_cardcf
	{
		ubyte version_;
		ubyte pin_freshness;
		uint cont_freshness;
		uint files_freshness;
	}
	struct sc_md_data
	{
		sc_md_cardcf cardcf;
		void* prop_data;
	}
}
else
{
	struct sc_md_data;
}

	struct sc_pkcs15_prkey_info
	{
		sc_pkcs15_id id;
		uint usage;
		uint access_flags;
		int native;
		int key_reference;
		size_t modulus_length;
		size_t field_length;
		uint[SC_MAX_SUPPORTED_ALGORITHMS] algo_refs;
		sc_pkcs15_der subject;
		sc_pkcs15_key_params params;
		sc_path path;
version(UPTO_15_OPENSC_VERSION)
{
		sc_md_cmap_record cmap_record;
}
else
{
		sc_auxiliary_data* aux_data;
}
	}
//	alias sc_pkcs15_prkey_info_t = sc_pkcs15_prkey_info;
